@@ -1,5 +1,6 @@
 export(product, ihasNext, ilimit, izip, enumerate, chain,
-       ifilter, ifilterfalse, irep, recycle, ichunk)
+       ifilter, ifilterfalse, irep, recycle, ichunk,
+       end_iteration, iteration_has_ended, new_iterator, is.iterator)
 export(hasNext)
 S3method("hasNext", "ihasNext")
 import(iterators)
