@@ -3,6 +3,7 @@ NEWS/ChangeLog for itertools
 
 0.1-1   2010-1-XX
     o	added ichunk function
+    o	added utility functions written by Hadley Wickham
 
 0.1	2009-12-29
     o	project created on r-forge
